--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,3 +1,7 @@
+body {
+  padding: 0 0 60px 0;
+}
+
 .container-md {
   display: flex;
   margin-top: 6px;
@@ -27,7 +31,7 @@
 }
 
 .container-imagen {
-  width: 45%;
+  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
