--- a/public/css/profile.scss
+++ b/public/css/profile.scss
@@ -1,3 +1,6 @@
+body{
+    padding: 0 0 60px 0;
+}
 .container-md{
     display: flex;
     margin-top: 6px;
@@ -6,7 +9,6 @@
 }
 .container-profile{
     width: 50%;
-
     background: rgba( 0, 0, 0, 0.05 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 1.5px );
@@ -27,7 +29,7 @@
     }
 }
 .container-imagen{
-    width: 45%;
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
